# covid19-helper-bot

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  after_deploy.sh  docker-compose.yml  install.sh  main.py  pyproject.toml
app/: __init__.py  app.py  main.py
app/api/: __init__.py  hello_world.py
app/api/routes/: sample.py
app/core/: __init__.py  config.py  engine.py  events.py  logging.py  paginator.py
app/custom_router/: autopilot_route.py
app/custom_routers/: __init__.py  autopilot_route.py  user_itentifier_injector.py
app/decorators/: __init__.py  error_fallback_action.py
app/dependencies/: __init__.py  twilio_request_validator.py
app/error_handlers/: error_fallback_action.py
app/middlewares/: __init__.py  twilio_request_validator.py
app/models/: __init__.py  api_service.py  autopilot_request.py  config.py  country_stats.py  document_base.py  environments.py  fauna_client_singleton.py  logging_levels.py  sample.py  singleton.py  twilio_common_responses.py  user_document.py
app/scripts/: __init__.py  cli.py  create_collections.py  generate_dev_env.py  schema_replacement.py  server_runner.py
app/services/: __init__.py  endless_medical_api.py  novelcovid_api.py  sample.py  sentry.py
app/utils/: __init__.py  features_mapping.py  get_entry_point.py  phone_to_country.py
assistant/: schema.json
design_docs/: Greetings.drawio
tests/: actions_schema.json  conftest.py  test_cli.py  test_cli_start.py  test_env_load.py  test_pagination_behavior.py  test_user_creation.py  test_user_document.py  test_user_greeting.py
(+8 files in other folders)
