[tool.poetry]
name = "covid19-helper-bot"
version = "0.1.0"
description = "A Whatsapp Bot to help get information about COVID19"
authors = ["me@alessandrojcm.dev"]

[tool.poetry.dependencies]
python = "3.8.2"
pydantic = {extras = ["dotenv"], version = "^1.4"}
requests = "^2.22.0"
loguru = "^0.4.0"
faunadb = "^2.11.0"
pytz = "^2019.3"
phonenumbers = "^8.12.1"
fastapi = "^0.54.1"
gunicorn = "^20.0.4"
uvicorn = "^0.11.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}
autopep8 = "^1.4.4"
pre-commit = "^2.2.0"
click = "^7.1.1"
uvicorn = "^0.11.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
